--- a/package.json
+++ b/package.json
@@ -9,16 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "ai": "^3.0.24",
+    "next": "14.2.2",
+    "openai": "^4.38.3",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.2"
+    "zod": "^3.23.0"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "14.2.2"
+    "eslint-config-next": "14.2.2",
+    "typescript": "^5"
   }
 }
